<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              tools:context=".IngredientsFragment"
              android:orientation="vertical"
              android:gravity="center_horizontal">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_serving_size"
            android:layout_marginVertical="?attr/listPreferredItemPaddingStart"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                app:icon="@drawable/baseline_remove_24"
                android:id="@+id/decrement_serving_size"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serving_size"
                android:id="@+id/serving_size"
                android:layout_marginHorizontal="?attr/listPreferredItemPaddingStart"/>

        <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                app:icon="@drawable/baseline_add_24"
                android:id="@+id/increment_serving_size"/>
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="?attr/listPreferredItemPaddingStart"/>

    <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/ingredients"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingredients"
            android:layout_marginHorizontal="?attr/listPreferredItemPaddingStart"
            android:layout_marginVertical="?attr/listPreferredItemPaddingStart"/>

</LinearLayout>


