<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="256dp"
            app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:statusBarScrim="?attr/colorPrimaryVariant"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
                app:expandedTitleTextColor="@android:color/transparent"
                app:collapsedTitleTextColor="@color/design_default_color_on_primary">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/pizza"
                    android:id="@+id/toolbar_recipe_image"
                    android:fitsSystemWindows="true"
                    android:contentDescription="@string/recipe_image"
                    />

            <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/topAppBar"
                    app:layout_collapseMode="pin"
                    android:background="@android:color/transparent"
                    android:elevation="1dp"
                    app:layout_scrollFlags="scroll|enterAlways|snap"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:navigationIconTint="@color/design_default_color_on_primary"
                    app:navigationIcon="@drawable/baseline_arrow_back_24"
                    />


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".RecipeDetailFragment">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/recipe_name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginVertical="?attr/listPreferredItemPaddingStart"/>

            <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="?attr/listPreferredItemPaddingStart"
                    android:layout_marginHorizontal="?attr/listPreferredItemPaddingStart">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/difficulty"
                        android:textStyle="italic"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipe_difficulty"
                        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <TextView
                        android:layout_marginStart="?attr/listPreferredItemPaddingEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calories_in_serving"
                        android:textStyle="italic"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipe_calories"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="?attr/listPreferredItemPaddingStart"
                    android:layout_marginHorizontal="?attr/listPreferredItemPaddingStart">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_serving_size"
                        android:textStyle="italic"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipe_serving_size"
                        android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <TextView
                        android:layout_marginStart="?attr/listPreferredItemPaddingEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cooking_time"
                        android:textStyle="italic"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/recipe_cooking_time"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <FrameLayout
                    android:id="@+id/ingredients_fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="?attr/listPreferredItemPaddingStart"/>

            <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/steps"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/cooking_steps"
                    android:layout_marginHorizontal="?attr/listPreferredItemPaddingStart"
                    android:layout_marginVertical="?attr/listPreferredItemPaddingStart"/>

            <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="?attr/listPreferredItemPaddingStart"/>

            <FrameLayout
                    android:id="@+id/timer_fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fab"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/baseline_share_24"
            android:contentDescription="@string/fab_content_desc"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>